# PaintBench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: extending.md  metric.md  paintbench-tasks.md  run_cycle.md  tinygrafixbench-tasks.md
scripts/: gen_website_examples.py  submit_inference_h100.sh
src/: benchmark_source.py  eval.py  generate_benchmark.py  inference.py  report.py  stats.py  visualize.py
src/core/: background.py  canvas.py  colors.py  shapes.py
src/tasks/: base.py  blending.py  border.py  comparison.py  construction.py  copying.py  counting.py  cropping.py  flood_fill.py  gradient.py  legend.py  ordering.py  pattern.py  point_operations.py  recolor.py  reflection.py  removal.py  rotation.py  scaling.py  shearing.py  translation.py
src/tinygrafixbench/: bar_chart.py  heatmap.py  line_chart.py  network.py  scatter_plot.py  utils.py
tests/: conftest.py  test_benchmark_source.py  test_cross_task_batching.py  test_determinism.py  test_eval.py  test_eval_cache.py  test_inference_concurrency.py  test_inference_gemini_config.py  test_inference_idempotent.py  test_inference_registry.py  test_regenerate_spec.py  test_smoke_pipeline.py  test_stats.py  test_task_registry.py
